tests/paczka1/small_fuzzy/43849557.err
Error in line 5: BsRg3zT A639 9,4
Error in line 8: 9lse A446 17,1
